--- a/app/views/course/degree-subject.html
+++ b/app/views/course/degree-subject.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 {% set title = "Degree subject requirements" %}
-{% set backLink = course.path + "/degree" %}
+{% set backLink = course.path + "/degree-level" %}
 
 {% block content %}
   {% include "course/_errors.html" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form action="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/requirements" method="post">
+      <form action="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/gcses" method="post">
 
         <h1 class="govuk-heading-l">Degree subject</h1>
 
@@ -16,7 +16,7 @@
         {% set degreeSubjectRequirementsHtml %}
           {{ govukTextarea({
             id: "degree-subject-requirements",
-            name: "degree-subject-requirements",
+            name: course.programmeCode + '-degree-subject-requirements',
             spellcheck: true,
             label: {
               text: "Degree subject requirements"
@@ -26,7 +26,7 @@
 
         {{ govukRadios({
           idPrefix: "degree-subject",
-          name: "degree-subject",
+          name: course.programmeCode + '-degree-subject-required',
           fieldset: {
             legend: {
               text: "Do you have more specific degree subject requirements?",
