--- a/app/views/course/degree-subject.html
+++ b/app/views/course/degree-subject.html
@@ -36,11 +36,11 @@
           },
           items: [
             {
-              value: "no",
+              value: "No",
               text: "No"
             },
             {
-              value: "yes",
+              value: "Yes",
               text: "Yes",
               conditional: {
                 html: degreeSubjectRequirementsHtml
