--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -186,96 +186,116 @@
         <h3 class="govuk-heading-m">
           Requirements and eligibility
         </h3>
-        <dl class="govuk-summary-list govuk-summary-list--short">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key ">
-              Degree
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {% if data[course.programmeCode + '-degree-minimum-required'] === "No" %}
-                An undergraduate degree, or equivalent
-              {% elif data[course.programmeCode + '-degree-minimum-required'] === "Yes" %}
 
-                {% set minDegreeClass = data[course.programmeCode + '-degree-minimum-classification'] %}
+        {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 
-                {% if minDegreeClass == "21" %}
-                  2:1 or above, or equivalent
-                {% elif minDegreeClass == "22" %}
-                  2:2 or above, or equivalent
-                {% elif minDegreeClass == "3" %}
-                  3rd class degree or above, or equivalent
-                {% endif %}
-              {% else %}
-                Empty
-              {% endif %}
-              {% if data[course.programmeCode + '-degree-subject-required'] === "Yes" %}
-                <br><br>
-                {{ data[course.programmeCode + '-degree-subject-requirements'] }}
-              {% endif %}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/degree">
-                Change<span class="govuk-visually-hidden"> degree requirements</span>
-              </a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key ">
-              GCSEs
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {% if data[course.programmeCode + '-gcse-additional-requirements'] === "No" %}
-                Grade 4 (C) or above in English and Maths, or equivalent
-              {% elif data[course.programmeCode + '-gcse-additional-requirements'] === "Yes" %}
-                Grade 4 (C) or above in English and Maths, or equivalent
+        {% set degreeValueHtml %}
+          {% if data[course.programmeCode + '-degree-minimum-required'] === "No" %}
+            An undergraduate degree, or equivalent
+          {% elif data[course.programmeCode + '-degree-minimum-required'] === "Yes" %}
 
-                <br><br>{{ data[course.programmeCode + '-gcse-requirements'] }}
+            {% set minDegreeClass = data[course.programmeCode + '-degree-minimum-classification'] %}
 
-              {% else %}
-                Empty
-              {% endif %}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/gcses">
-                Change<span class="govuk-visually-hidden"> GCSE requirements</span>
-              </a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key ">
-              Personal qualities (optional)
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {% if data[course.programmeCode + '-personal-qualities'] %}
-                {{ data[course.programmeCode + '-personal-qualities'] }}
-              {% else %}
-                Empty
-              {% endif %}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/requirements">
-                Change<span class="govuk-visually-hidden"> personal qualities</span>
-              </a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key ">
-              Other requirements (optional)
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {% if data[course.programmeCode + '-other-requirements'] %}
-                {{ data[course.programmeCode + '-other-requirements'] }}
-              {% else %}
-                Empty
-              {% endif %}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/requirements#other-requirements"">
-                Change<span class="govuk-visually-hidden"> other requirements</span>
-              </a>
-            </dd>
-          </div>
-        </dl>
+            {% if minDegreeClass == "21" %}
+              2:1 or above, or equivalent
+            {% elif minDegreeClass == "22" %}
+              2:2 or above, or equivalent
+            {% elif minDegreeClass == "3" %}
+              3rd class degree or above, or equivalent
+            {% endif %}
+          {% endif %}
+          {% if data[course.programmeCode + '-degree-subject-required'] === "Yes" %}
+            <br><br>
+            {{ data[course.programmeCode + '-degree-subject-requirements'] }}
+          {% endif %}
+        {% endset %}
+
+        {% set gcseValueHtml %}
+          {% if data[course.programmeCode + '-gcse-additional-requirements'] === "No" %}
+            Grade 4 (C) or above in English and Maths, or equivalent
+          {% elif data[course.programmeCode + '-gcse-additional-requirements'] === "Yes" %}
+            Grade 4 (C) or above in English and Maths, or equivalent
+
+            <br><br>{{ data[course.programmeCode + '-gcse-requirements'] }}
+
+          {% else %}
+            Empty
+          {% endif %}
+        {% endset %}
+
+        {{ govukSummaryList({
+          classes: '',
+          rows: [
+            {
+              key: {
+                text: "Degree"
+              },
+              value: {
+                html: degreeValueHtml
+              },
+              actions: {
+                items: [
+                  {
+                    href: "/course/" + data['provider-code'] + "/" + course.programmeCode + "/degree",
+                    text: "Change",
+                    visuallyHiddenText: "degree requirements"
+                  }
+                ]
+              }
+            },
+            {
+              key: {
+                text: "GCSEs"
+              },
+              value: {
+                html: gcseValueHtml
+              },
+              actions: {
+                items: [
+                  {
+                    href: "/course/" + data['provider-code'] + "/" + course.programmeCode + "/gcses",
+                    text: "Change",
+                    visuallyHiddenText: "GCSE requirements"
+                  }
+                ]
+              }
+            },
+            {
+              key: {
+                text: "Personal qualities (optional)"
+              },
+              value: {
+                html: data[course.programmeCode + '-personal-qualities']
+              },
+              actions: {
+                items: [
+                  {
+                    href: "/course/" + data['provider-code'] + "/" + course.programmeCode + "/requirements",
+                    text: "Change",
+                    visuallyHiddenText: "personal qualities requirements"
+                  }
+                ]
+              }
+            },
+            {
+              key: {
+                text: "Other requirements (optional)"
+              },
+              value: {
+                html: data[course.programmeCode + '-other-requirements']
+              },
+              actions: {
+                items: [
+                  {
+                    href: "/course/" + data['provider-code'] + "/" + course.programmeCode + "/requirements#other-requirements",
+                    text: "Change",
+                    visuallyHiddenText: "other requirements"
+                  }
+                ]
+              }
+            }
+          ]
+        }) }}
       </div>
       <div class="govuk-grid-column-one-third">
         {{ macros.coursePublish(publishState, data[course.programmeCode + '-published-before'], data['provider-code'], course.programmeCode) }}
