--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -211,16 +211,55 @@
         {% endset %}
 
         {% set gcseValueHtml %}
-          {% if data[course.programmeCode + '-gcse-additional-requirements'] === "No" %}
-            Grade 4 (C) or above in English and Maths, or equivalent
-          {% elif data[course.programmeCode + '-gcse-additional-requirements'] === "Yes" %}
-            Grade 4 (C) or above in English and Maths, or equivalent
-
-            <br><br>{{ data[course.programmeCode + '-gcse-requirements'] }}
-
-          {% else %}
-            Empty
+            <p class="govuk-body">Grade 4 (C) or above in English{{", maths and science" if course.name == "Primary" else " and maths" }}, or equivalent</p>
+          {% if data[course.programmeCode + '-gcse-additional-requirements'] === "Yes" %}
+            <p class="govuk-body">{{ data[course.programmeCode + '-gcse-requirements'] }}</p>
           {% endif %}
+
+          {% set englishGcseFlexibility = data[course.programmeCode + '-gcse-english-flexibility'] %}
+          {% set mathsGcseFlexibility = data[course.programmeCode + '-gcse-maths-flexibility'] %}
+          {% set scienceGcseFlexibility = data[course.programmeCode + '-gcse-science-flexibility'] %}
+
+          {% set subjectsMustHave = [] %}
+          {% set subjectsCanBePending = [] %}
+          {% set subjectsPendingOrEquivalencyTests = [] %}
+
+          {% if englishGcseFlexibility === "pending" %}
+            {% set subjectsCanBePending = subjectsCanBePending | push("English") %}
+          {% elif englishGcseFlexibility === "must" %}
+            {% set subjectsMustHave = subjectsMustHave | push("English") %}
+          {% elif englishGcseFlexibility === "equivalency-test-offered" %}
+            {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("English") %}
+          {% endif %}
+
+          {% if mathsGcseFlexibility === "pending" %}
+            {% set subjectsCanBePending = subjectsCanBePending | push("maths") %}
+          {% elif mathsGcseFlexibility === "must" %}
+            {% set subjectsMustHave = subjectsMustHave | push("maths") %}
+          {% elif mathsGcseFlexibility === "equivalency-test-offered" %}
+            {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("maths") %}
+          {% endif %}
+
+          {% if scienceGcseFlexibility === "pending" %}
+            {% set subjectsCanBePending = subjectsCanBePending | push("science") %}
+          {% elif scienceGcseFlexibility === "must" %}
+            {% set subjectsMustHave = subjectsMustHave | push("science") %}
+          {% elif scienceGcseFlexibility === "equivalency-test-offered" %}
+            {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("science") %}
+          {% endif %}
+
+          {% if subjectsMustHave | length > 0 %}
+            <p class="govuk-body">You will not consider candidates who are currently taking {{"a" if (subjectsMustHave | length) === 1 }} {{ subjectsMustHave | formatOrList }} GCSE{{"s" if (subjectsMustHave | length) > 1 }} or who need to take equivalency tests.</p>
+          {% endif %}
+
+          {% if subjectsCanBePending | length > 0 %}
+            <p class="govuk-body">You will consider candidates who are currently taking {{"a" if (subjectsCanBePending | length) === 1 }} {{ subjectsCanBePending | formatOrList }} GCSE{{"s" if (subjectsCanBePending | length) > 1 }} or who need to take equivalency tests.</p>
+          {% endif %}
+
+          {% if subjectsPendingOrEquivalencyTests | length > 0 %}
+            <p class="govuk-body">You will consider candidates who are currently taking {{"a" if (subjectsPendingOrEquivalencyTests | length) === 1 }} {{ subjectsPendingOrEquivalencyTests | formatOrList }} GCSE{{"s" if (subjectsPendingOrEquivalencyTests | length) > 1 }} or who need to take equivalency tests.</p>
+          {% endif %}
+
         {% endset %}
 
         {{ govukSummaryList({
