--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -292,7 +292,7 @@
               actions: {
                 items: [
                   {
-                    href: "/course/" + data['provider-code'] + "/" + course.programmeCode + "/gcses",
+                    href: "/course/" + data['provider-code'] + "/" + course.programmeCode + "/gcses-pending-or-equivalency-tests",
                     text: "Change",
                     visuallyHiddenText: "GCSE requirements"
                   }
