--- a/app/views/cycles.html
+++ b/app/views/cycles.html
@@ -23,7 +23,7 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
-          <a href="{% if data['next-cycle'] %}{{ currentCyclePrototype }}{% else %}/{% endif %}">Current cycle (2019&thinsp;–&thinsp;2020)</a>
+          <a href="{% if data['next-cycle'] %}{{ currentCyclePrototype }}{% else %}/{% endif %}">Current cycle (2021 to 2022)</a>
         </h2>
 
         <p>Use this section to:</p>
@@ -34,7 +34,7 @@
       </div>
       <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
-          <a href="{% if data['next-cycle'] %}/{% else %}{{ nextCyclePrototype }}{% endif %}">Next cycle (2020&thinsp;–&thinsp;2021)</a>
+          <a href="{% if data['next-cycle'] %}/{% else %}{{ nextCyclePrototype }}{% endif %}">Next cycle (2022 to 2023)</a>
         </h2>
         <p>Use this section to:</p>
         <ul class="govuk-list govuk-list--bullet">
