--- a/app/views/location.html
+++ b/app/views/location.html
@@ -118,7 +118,7 @@
     {% endset %}
 
     {% set historyHtml %}
-      <!-- <h2 class="govuk-heading-l govuk-!-margin-top-6 govuk-!-margin-bottom-8">2020&thinsp;–&thinsp;2021 cycle</h2>
+      <!-- <h2 class="govuk-heading-l govuk-!-margin-top-6 govuk-!-margin-bottom-8">2020 to 2021 cycle</h2>
       <ul class="timeline">
         <li class="edition">
           <ul class="edition-timeline">
