--- a/app/views/organisation-notification-enabled.html
+++ b/app/views/organisation-notification-enabled.html
@@ -22,9 +22,9 @@
       <h1 class="govuk-heading-xl">
         {% if data['rolled-over'] %}
           {% if data['next-cycle'] %}
-            Next cycle (2020&thinsp;–&thinsp;2021)
+            Next cycle (2022 to 2023)
           {% else %}
-            Current cycle (2019&thinsp;–&thinsp;2020)
+            Current cycle (2021 to 2022)
           {% endif %}
         {% else %}
           {{ data['training-provider-name'] }}
