--- a/app/views/rolled-over.html
+++ b/app/views/rolled-over.html
@@ -9,7 +9,7 @@
         Begin preparing for the next&nbsp;cycle
       </h1>
 
-      <p>All your courses, locations and details have been rolled over from the current cycle. You can now update them for the next recruitment cycle&nbsp;(2020&thinsp;–&thinsp;2021).</p>
+      <p>All your courses, locations and details have been rolled over from the current cycle. You can now update them for the next recruitment cycle&nbsp;(2020 to 2021).</p>
 
       <p>You can:</p>
       <ul class="govuk-list govuk-list--bullet">
