Set checked value

--- a/app/views/course/visa-sponsorship.html
+++ b/app/views/course/visa-sponsorship.html
@@ -35,11 +35,13 @@
           items: [
             {
               value: "Yes",
-              text: "Yes"
+              text: "Yes",
+              checked: (data[radioName] === "Yes")
             },
             {
               value: "No",
-              text: "No"
+              text: "No",
+              checked: (data[radioName] === "No")
             }
           ]
         }) }}
