--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -83,7 +83,7 @@
           {% if data[prefix + '-interview-process'] %}
             <li><a href="#section-interview">Interview process</a></li>
           {% endif %}
-          <li><a href="#section-international">International candidates</a></li>
+          <li><a href="#section-international">International students</a></li>
           <li><a href="#section-access-needs">Training with disabilities and other needs</a></li>
           <li><a href="#section-contact">Contact details</a></li>
           <li><a href="#section-apply">Apply</a></li>
@@ -174,7 +174,7 @@
           {{ macros.previewPart(prefix + '-interview-process') }}
         {% endif %}
 
-        <h2 class="govuk-heading-l" id="section-international">International candidates</h2>
+        <h2 class="govuk-heading-l" id="section-international">International students</h2>
 
         {% set courseType = data[prefix + "-type"] %}
         {% set visaSponsorship = data[prefix + '-visa-sponsorship'] %}
