Add paragraph and link to home fee status eligibility

--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -130,6 +130,8 @@
             </div>
           {% endif %}
 
+          <p class="govuk-body">Some candidates, such as those with settled or pre-settled status under the EU Settlement scheme, may be <a href="https://www.gov.uk/government/publications/student-finance-eligibility-2021-to-2022-academic-year" class="govuk-body">eligible for home fee status and student finance</a>.</p>
+
           {% if data[prefix + '-fee-details'] %}
             {{ macros.previewPart(prefix + '-fee-details') }}
           {% endif %}
