--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -435,7 +435,7 @@
         <ul class="edition-timeline">
           <div class="timeline-day-wrapper">
             <li class="timeline-day">
-              <h3 class="govuk-heading-m timeline-day-heading">15 January 2019</h3>
+              <h3 class="govuk-heading-m">15 January 2019</h3>
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-l">Published</h4>
@@ -444,7 +444,7 @@
               </ul>
             </li>
             <li class="timeline-day">
-              <h3 class="govuk-heading-m timeline-day-heading">14 January 2019</h3>
+              <h3 class="govuk-heading-m">14 January 2019</h3>
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">About this course updated</h4>
@@ -461,7 +461,7 @@
               </ul>
             </li>
             <li class="timeline-day">
-              <h3 class="govuk-heading-m timeline-day-heading">15 December 2018</h3>
+              <h3 class="govuk-heading-m">15 December 2018</h3>
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">Vacancies edited, applications reopened</h4>
@@ -470,7 +470,7 @@
               </ul>
             </li>
             <li class="timeline-day">
-              <h3 class="govuk-heading-m timeline-day-heading">13 December 2018</h3>
+              <h3 class="govuk-heading-m">13 December 2018</h3>
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">No vacancies, applications closed</h4>
@@ -479,7 +479,7 @@
               </ul>
             </li>
             <li class="timeline-day">
-              <h3 class="govuk-heading-m timeline-day-heading">3 November 2018</h3>
+              <h3 class="govuk-heading-m">3 November 2018</h3>
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">Vacancies edited</h4>
@@ -488,7 +488,7 @@
               </ul>
             </li>
             <li class="timeline-day">
-              <h3 class="govuk-heading-m timeline-day-heading">10 October 2018</h3>
+              <h3 class="govuk-heading-m">10 October 2018</h3>
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-l">First published</h4>
@@ -497,7 +497,7 @@
               </ul>
             </li>
             <li class="timeline-day">
-              <h3 class="govuk-heading-m timeline-day-heading">14 August 2019</h3>
+              <h3 class="govuk-heading-m">14 August 2019</h3>
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">About this course updated</h4>
